@@ -387,7 +387,7 @@ class ActionHandler<T extends FragmentActivity & Addons> extends AbstractActionH
             mActivity.finish();
         } catch (SecurityException | ActivityNotFoundException e) {
             Log.e(TAG, "Caught error: " + e.getLocalizedMessage());
-            mInjector.dialogs.showNoApplicationFound();
+            mInjector.dialogs.showNoApplicationFoundToast();
         }
     }
 
@@ -468,7 +468,7 @@ class ActionHandler<T extends FragmentActivity & Addons> extends AbstractActionH
         if (selection.size() > 1) {
             mActivity.onDocumentsPicked(selection);
         } else {
-            mActivity.onDocumentPicked(selection.getFirst());
+            mActivity.onDocumentPicked(selection.get(0));
         }
     }
 
